Add support for logoUrl and showVersionDetails theme parameters to simplify layout components usage in Stage and Composer

--- a/src/Home.stories.mdx
+++ b/src/Home.stories.mdx
@@ -23,6 +23,8 @@ Theme should have the following format:
 ```
 {
     mainColor: <string>,
-    headerTextColor: <string>
+    headerTextColor: <string>,
+    logoUrl: <string>,
+    showVersionDetails: <boolean>
 }
 ```
